...
    const val PREMIUM = "premium"
    const val TEAM = "team"
    const val AUTH = "auth"
    const val MINIGAMES = "minigames"
    const val MINIGAME = "minigame/{gameId}"
    const val GAMIFICATION = "gamification"
    const val SRS = "srs"
    const val FOR_KIDS = "forkids"
    const val FOR_KIDS_LESSON = "forkids/{lessonId}"
    const val FOR_SENIORS = "forseniors"
    const val FOR_SENIORS_LESSON = "forseniors/{lessonId}"
    const val ABOUT = "about"

...
